--- a/beachsoccer/templates/server/bsfixtures.html
+++ b/beachsoccer/templates/server/bsfixtures.html
@@ -1,9 +1,9 @@
-{% extends "server/bsbase.html" %} {%load static%}
+{% extends "server/futbase.html" %} {%load static%}
 <!---->
 {% block title %} {{championship}}{% endblock %}
 <!---->
 
-{%block beachsoccer%}
+{%block football%}
 <div class="championships">
   <div class="champ">
     {% if championship.thumbnail %}
