--- a/beachsoccer/templates/server/bsstandings.html
+++ b/beachsoccer/templates/server/bsstandings.html
@@ -1,9 +1,9 @@
-{% extends "server/bsbase.html" %} {%load static%}
+{% extends "server/futbase.html" %} {%load static%}
 <!---->
-{% block title %} BeachSoccer Standings{% endblock %}
+{% block title %} Beachsoccer Standings{% endblock %}
 <!---->
 
-{%block beachsoccer%}
+{%block football%}
 <div class="standings">
   <h1>Standings</h1>
 
