--- a/beachsoccer/templates/server/beachsoccer.html
+++ b/beachsoccer/templates/server/beachsoccer.html
@@ -1,20 +1,27 @@
-{% extends "server/bsbase.html" %} {%load static%}
+{% extends "dashboard/dashboard.html" %} {%load static%}
 <!---->
-{% block title %} BeachSoccer{% endblock %}
+{% block title %} {{tournament.championship}}{% endblock %}
 <!---->
 
-{%block beachsoccer%}
+{%block content%}
 <div class="championships">
   <div class="champ">
     {% if championship.thumbnail %}
-    <img src="{{championship.thumbnail.url}}" alt="" />{% endif %}
+    <img src="{{championship.thumbnail.url}}" alt="" />
+    {% endif %}
     <h3>{{championship}}</h3>
   </div>
   <div class="top flex">
-    <h1>BeachSoccer Tournaments</h1>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Add tournament</a>
+    <h1>Beachsoccer Tournaments</h1>
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-toggle="modal"
+      data-target="#exampleModal"
+    >
+      Add tournament
+    </button>
   </div>
-
   <div class="lo">
     <div class="official-list">
       <table id="myTable" class="display">
@@ -31,10 +38,10 @@
           </tr>
         </thead>
         <tbody>
-          {% for comp  in fcomps%}
+          {% for comp in fcomps%}
           <tr>
             <td>
-              <a href="{% url 'beachsoccer_tournament' comp.id%}"
+              <a href="{% url 'football_tournament' comp.id%}"
                 >{{comp.championship}} {{comp.name}}</a
               >
             </td>
@@ -80,7 +87,40 @@
         </div>
         <div class="modal-body">
           <form action="" method="post" class="form-control">
-            {% csrf_token %} {{cform.as_p}}
+            {% csrf_token %}
+            <div class="field flex">
+              <label>{{ cform.name.label}} </label>{{cform.name}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.championship.label}} </label
+              >{{cform.championship}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.season.label}} </label>{{cform.season}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.participants.label}} </label
+              >{{cform.participants}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.number_of_groups.label}} </label
+              >{{cform.number_of_groups}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.sport.label}} </label>{{cform.sport}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.gender.label}} </label>{{cform.gender}}
+            </div>
+            <div class="field flex">
+              <label>{{ cform.age.label}} </label>{{cform.age}}
+            </div>
+
+            <div class="field flex">
+              <label>{{ cform.teams.label}} </label>
+              <div id="id_teams" class="form-control teams"></div>
+            </div>
+
             <button type="submit" class="btn btn-primary">Save changes</button>
           </form>
         </div>
@@ -94,4 +134,5 @@
     </div>
   </div>
 </div>
+
 {% endblock %}
