--- a/beachsoccer/templates/frontend/bsstandings.html
+++ b/beachsoccer/templates/frontend/bsstandings.html
@@ -1,4 +1,4 @@
-{% extends "frontend/football.html" %}
+{% extends "frontend/beachsoccer.html" %}
 
 <!--static-->
 {% load static %}
@@ -6,7 +6,7 @@
 {% block futitle %}Beachsoccer{% endblock futitle %}
 <!--content-->
 {% block futball %}
-<h1>football standings</h1>
+<h1>beachsoccer standings</h1>
 <div class="standings">
   {% for sport_data in standings_data %}
 
