--- a/beachsoccer/templates/server/beachsoccer.html
+++ b/beachsoccer/templates/server/beachsoccer.html
@@ -41,7 +41,7 @@
           {% for comp in fcomps%}
           <tr>
             <td>
-              <a href="{% url 'football_tournament' comp.id%}"
+              <a href="{% url 'beachsoccer_tournament' comp.id%}"
                 >{{comp.championship}} {{comp.name}}</a
               >
             </td>
