--- a/beachsoccer/templates/server/bsbase.html
+++ b/beachsoccer/templates/server/bsbase.html
@@ -9,14 +9,14 @@
     <h1>Beachsoccer</h1>
     <nav class="fut-nav">
       <div class="pages flex">
-        <li><a href="{%url 'football'%}">Tournaments</a></li>
-        <li><a href="{%url 'football_fixtures'%}">Fixtures</a></li>
+        <li><a href="{%url 'beachsoccer'%}">Tournaments</a></li>
+        <li><a href="{%url 'beachsoccer_fixtures'%}">Fixtures</a></li>
         <li><a href="">Results</a></li>
-        <li><a href="{%url 'football_standings'%}">Standings</a></li>
+        <li><a href="{%url 'beachsoccer_standings'%}">Standings</a></li>
         <li><a href="{% url 'Footrankigs' %}">Rankings</a></li>
       </div>
     </nav>
   </div>
-  {% block football %}{% endblock %}
+  {% block beachsoccer %}{% endblock %}
 </div>
 {% endblock %}
