--- a/beachsoccer/templates/server/bsfixture.html
+++ b/beachsoccer/templates/server/bsfixture.html
@@ -3,7 +3,7 @@
 {% block title %} {{fixture}}{% endblock %}
 <!---->
 
-{%block football%}
+{%block beachsoccer%}
 <div class="fxturera">
   <div class="top flex">
     <h1>Fixture {{fixture.id}}</h1>
