--- a/beachsoccer/templates/server/bsfixtures.html
+++ b/beachsoccer/templates/server/bsfixtures.html
@@ -3,7 +3,7 @@
 {% block title %} {{championship}}{% endblock %}
 <!---->
 
-{%block football%}
+{%block beachsoccer%}
 <div class="championships">
   <div class="champ">
     {% if championship.thumbnail %}
