--- a/beachsoccer/templates/server/bsstandings.html
+++ b/beachsoccer/templates/server/bsstandings.html
@@ -3,7 +3,7 @@
 {% block title %} Beachsoccer Standings{% endblock %}
 <!---->
 
-{%block football%}
+{%block beachsoccer%}
 <div class="standings">
   <h1>Standings</h1>
 
