--- a/beachsoccer/templates/server/edit_bsfixture.html
+++ b/beachsoccer/templates/server/edit_bsfixture.html
@@ -1,6 +1,6 @@
-{% extends "server/futbase.html" %} {%load static%}
+{% extends "server/bsbase.html" %} {%load static%}
 <!-- fixtures_edit.html -->
-{%block football%}
+{%block beachsoccer%}
 <div class="fixture-page">
   <h2>{{fixture.team1}} VS {{fixture.team2}}</h2>
 </div>
