--- a/beachsoccer/templates/frontend/bsresults.html
+++ b/beachsoccer/templates/frontend/bsresults.html
@@ -1,4 +1,4 @@
-{% extends "frontend/football.html" %}
+{% extends "frontend/beachsoccer.html" %}
 
 <!--static-->
 {% load static %}
@@ -8,7 +8,7 @@
 {% block futitle %}Beachsoccer{% endblock futitle %}
 <!--content-->
 {% block futball %}
-<h1>football results</h1>
+<h1>beachsoccer results</h1>
 <div class="fixtures">
   <table class="table table-striped">
     {% regroup results by competition as competition_list %}
