--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -81,7 +81,7 @@
             <li><a class="dropdown-item" href="{% url 'Hockey'%}">Hockey</a></li>
             <li><a class="dropdown-item" href="#">Table Tennis</a></li>
             <li><a class="dropdown-item" href="#">Tennis</a></li>
-            <li><a class="dropdown-item" href="#">Beach Soccer</a></li>
+            <li><a class="dropdown-item" href="{% url 'Beachsoccer'%}">Beach Soccer</a></li>
             <li><a class="dropdown-item" href="#">Woodball</a></li>
             <li><a class="dropdown-item" href="#">Beach Volleyball</a></li>
             <li><a class="dropdown-item" href="#">Lacrosse</a></li>
