--- a/volleyball/templates/server/vedit_fixture.html
+++ b/volleyball/templates/server/vedit_fixture.html
@@ -1,4 +1,9 @@
-{% extends "server/vobase.html" %} {% load static %} {% block volleyball %}
+{% extends "dashboard/dashboard.html" %} {%load static%}
+<!---->
+{% block title %} {{tournament.championship}}{% endblock %}
+<!---->
+
+{%block content%}
 <div class="container-fluid mt-4">
   <div class="row">
     <div class="col-12">
@@ -108,26 +113,6 @@
                 >{{form.team2_score.label}}</label
               >
               {{form.team2_score}}
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label
-                for="{{ form.team1_sets_won.id_for_label }}"
-                class="form-label"
-                >{{form.team1_sets_won.label}}</label
-              >
-              {{form.team1_sets_won}}
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label
-                for="{{ form.team2_sets_won.id_for_label }}"
-                class="form-label"
-                >{{form.team2_sets_won.label}}</label
-              >
-              {{form.team2_sets_won}}
             </div>
           </div>
         </div>
