--- a/beachsoccer/templates/frontend/bsfixtures.html
+++ b/beachsoccer/templates/frontend/bsfixtures.html
@@ -41,7 +41,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for fixture in futfixures %}
+            {% for fixture in bsfixures %}
             <tr>
               <td>{{ fixture.id }}</td>
               <td>{{ fixture.team1 }}</td>
